--- a/style.css
+++ b/style.css
@@ -51,12 +51,20 @@
 }
 
 .res-card-img{
-  width:100%
+  width:100%;
+  height:40%;
 }
 
 .res-container{
   display:flex;
   flex-wrap:wrap;
-  gap:20px;
-  justify-content:center;
+  gap:10px;
+  justify-content:flex-start;
+}
+
+.filter-btn{
+  margin:10px;
+  color:white;
+  background:darkblue;
+  cursor:pointer;
 }
